<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fpuna.py.com.appolympos.activities.SyncActivity"
    tools:showIn="@layout/activity_sync">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBoxVendedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_vendedor" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBoxCircuito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_circuito" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBoxClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_clientes" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBoxProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_productos" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBoxNoCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_no_compra" />
    </LinearLayout>

    <android.support.v7.widget.ButtonBarLayout
        style="@style/MyButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sync_button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sync_button_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_accept" />

    </android.support.v7.widget.ButtonBarLayout>
</RelativeLayout>
