<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fpuna.py.com.appolympos.activities.PictureActivity"
    tools:showIn="@layout/activity_picture">

    <LinearLayout
        android:id="@+id/picture_client_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/prompt_client">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/picture_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_account_box_black_24dp"
                android:drawablePadding="@dimen/default_margin"
                android:drawableStart="@mipmap/ic_account_box_black_24dp"
                android:ems="10"
                android:enabled="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/primaryText"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/prompt_ruc">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/picture_client_ruc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_chrome_reader_mode_black_24dp"
                android:drawablePadding="@dimen/default_margin"
                android:drawableStart="@mipmap/ic_chrome_reader_mode_black_24dp"
                android:ems="10"
                android:enabled="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/primaryText"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture_client_info"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/picture_client_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/label_commerce_picture"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/picture_client_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@+id/include"
            app:srcCompat="@drawable/ic_camera_alt_black_156dp" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonBarLayout"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@mipmap/ic_photo_camera_black_24dp" />


    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/buttonBarLayout"
        style="@style/MyButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_send"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_accept" />

    </android.support.v7.widget.ButtonBarLayout>

</RelativeLayout>

